--- a/index.html
+++ b/index.html
@@ -80,14 +80,17 @@
             <a href="#top" id="pageTop" class="on" style="opacity: 1; bottom: 15px;">맨 위로가기</a>
         </div>
         <div id="slider">
-
+            <button class="slider-button" id="slider-left-button"></button>
+            <button class="slider-button" id="slider-right-button"></button>
+            <div class="slider-numbering" ></div>
             <ul class="slides">
-                <li class="slide"><div id="img-1"></div></li>
+                <li class="slide"><div class="img-1"></div></li>
                 <li class="slide"><div id="img-2"></div></li>
                 <li class="slide"><div id="img-3"></div></li>
                 <li class="slide"><div id="img-4"></div></li>
                 <li class="slide"><div id="img-5"></div></li>
                 <li class="slide"><div id="img-6"></div></li>
+                <li class="slide"><div class="img-1"></div></li>
             </ul>
     
         </div>
